--- a/sfit/sfit/doctype/appointments/appointments.json
+++ b/sfit/sfit/doctype/appointments/appointments.json
@@ -49,6 +49,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "default": "", 
    "fieldname": "status", 
    "fieldtype": "Select", 
    "hidden": 0, 
@@ -61,7 +62,7 @@
    "label": "Status", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Completed\nFixed \nRescheduled \nCancelled ", 
+   "options": "Completed\nFixed\nRescheduled\nCancelled", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -121,7 +122,7 @@
    "label": "Appointment Type", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Physio Appointment\nDietitian Appointment", 
+   "options": "physio\ndietitian", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -1585,7 +1586,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-01-04 19:06:09.095799", 
+ "modified": "2018-01-10 13:14:38.947161", 
  "modified_by": "Administrator", 
  "module": "SFIT", 
  "name": "Appointments", 
