--- a/sfit/sfit/doctype/measurement_charts_and_progression/measurement_charts_and_progression.json
+++ b/sfit/sfit/doctype/measurement_charts_and_progression/measurement_charts_and_progression.json
@@ -109,6 +109,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "default": "Today", 
    "fieldname": "date_of_mesurement", 
    "fieldtype": "Date", 
    "hidden": 0, 
@@ -125,7 +126,7 @@
    "precision": "", 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
-   "read_only": 0, 
+   "read_only": 1, 
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 1, 
@@ -918,7 +919,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-12-04 16:02:22.746068", 
+ "modified": "2018-01-10 14:37:49.343883", 
  "modified_by": "Administrator", 
  "module": "SFIT", 
  "name": "Measurement charts and Progression", 
